examples/invalid/syntaxErr/basic/multipleBegins.wacc
# begin missing closing end
# Output:
# #syntax error#

#Program:#

begin 
  skip 
end

begin 
  skip 
end
